# SPBPU-compile-labs

Course/Work/Compile/: CMakeLists.txt  context.h  detected_callbacks.c  detected_callbacks.h  grammar.y  lexic.l  logging.c  logging.h  test_nano.sh
Course/Work/Compile/TestCases/: code.c
Lab 1/Doc/: Lab_1.docx  Report.docx
Lab 1/Work/: compile
Lab 1/Work/src/: grammar.y  lexic.l
Lab 1/Work/tests/: code.z
Lab 1/Work/tmp/: lex.yy.c  y.tab.c  y.tab.h
Lab 2/Doc/: Report.docx
Lab 2/Work/: Makefile  compile
Lab 2/Work/src/: RegisterAllocator.h  SolverStack.h  Vars.h  grammar.y  lexic.l
Lab 2/Work/tests/: asm.txt  code.z  code2.z  code3.z  out.asm  out.asmmake  out2.asm  out3.asm
Lab 2/Work/tmp/: RegisterAllocator.h  SolverStack.h  lex.yy.c  y.tab.c  y.tab.h
Lab 3/Virtual Machine/: AsmCommandHandler.cpp  AsmCommandHandler.h
Lab 3/VirtualMachine/: VirtualMachine  VirtualMachine.pro  out.asm
Lab 3/VirtualMachine/src/: asmfileparser.cpp  asmfileparser.h  commandlist.cpp  commandlist.h  main.cpp
